@@ -1,3 +1,7 @@
+	* Solved "problems with multihomed and family order"
+		- https://rt.cpan.org/Ticket/Display.html?id=57676
+		- Thanks to Steffen Ullrich
+
 2010-03-25 Shlomi Fish <shlomif@iglu.org.il>
 	* Fix the inet_pton / inet_ntop import warnings:
 		- https://rt.cpan.org/Ticket/Display.html?id=55901
